--- a/compose.yaml
+++ b/compose.yaml
@@ -9,8 +9,7 @@ services:
     ports:
       - "8080:80"  # Lokaler Port 8080 wird auf den Containerport 80 gemappt
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./html:/usr/share/nginx/html:ro
+      - ./html:/usr/share/nginx/html
     restart: always
 
   pihole1:
@@ -24,9 +23,9 @@ services:
       - ./pihole/etc-pihole:/etc/pihole
       - ./pihole/etc-dnsmasq.d:/etc/dnsmasq.d
     ports:
-      - "53:53/tcp"  # DNS-Port (TCP)
-      - "53:53/udp"  # DNS-Port (UDP)
-      - "81:80"      # Pi-hole-Weboberfläche (http://localhost:81)
+      - "5356:53/tcp"  # DNS-Port (TCP)
+      - "5356:53/udp"  # DNS-Port (UDP)
+      - "8081:80"      # Pi-hole-Weboberfläche (http://localhost:8081/admin)
     dns:
       - 127.0.0.1
       - 8.8.8.8
@@ -44,9 +43,10 @@ services:
       - ./pihole2/etc-pihole:/etc/pihole
       - ./pihole2/etc-dnsmasq.d:/etc/dnsmasq.d
     ports:
-      - "8082:80" # Webinterface
-      - "5354:53/tcp"
-      - "5354:53/udp"
+      - "5355:53/tcp"
+      - "5355:53/udp"
+      - "8082:80" # Webinterface (http://localhost:8082/admin)
+
     dns:
       - 127.0.0.1
       - 8.8.8.8
@@ -54,12 +54,12 @@ services:
     restart: unless-stopped
 
     
-#  portainer:
-#    image: portainer/portainer-ce:latest
-#    container_name: portainer-container
-#    ports:
-#      - "9000:9000"  # Webinterface von Portainer (http://localhost:9000)
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock  # Zugriff auf Docker
-#      - ./portainer-data:/data  # Persistente Daten von Portainer
-#    restart: always
+  portainer:
+    image: portainer/portainer-ce:latest
+    container_name: portainer-container
+    ports:
+      - "9000:9000"  # Webinterface von Portainer (http://localhost:9000)
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock  # Zugriff auf Docker
+      - ./portainer-data:/data  # Persistente Daten von Portainer
+    restart: always
